Bug 55060 - Weborder: GlobalCollect > Text is not centered in the 'CVV Required' window

--- a/skins/weborder/css/profile.css
+++ b/skins/weborder/css/profile.css
@@ -251,6 +251,7 @@
 .profile-cvv-container {
     width: 300px;
     padding: 10px;
+    margin: 0 auto;
 }
 
 .profile-cvv-container .cvv-required-info {
